--- a/WebApp-B2C-DotNet/Web.config
+++ b/WebApp-B2C-DotNet/Web.config
@@ -9,8 +9,8 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="ida:Tenant" value="fabrikamb2c.onmicrosoft.com" />
-    <add key="ida:ClientId" value="90c0fe63-bcf2-44d5-8fb7-b8bbc0b29dc6" />
+    <add key="ida:Tenant" value="b2cauthdemo.onmicrosoft.com" />
+    <add key="ida:ClientId" value="829c923e-8cf1-4326-89cf-b99c43264601" />
     <add key="ida:AadInstance" value="https://login.microsoftonline.com/{0}/v2.0/.well-known/openid-configuration?p={1}" />
     <add key="ida:RedirectUri" value="https://localhost:44316/" />
     <add key="ida:SignUpPolicyId" value="b2c_1_sign_up" />
